--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -30,7 +30,7 @@ For pseudo-reactions, appropriate notes are included to describe the collapse. D
 ### 4. Regulatory pattern (motif) searches and sorting
 Metaboverse provides a variety of different regulatory patterns (motifs) for users to explore. To identify a motif is to compare some value that is computed from a reaction or a pathway with a user-specified threshold.
 
-The identified motifs will be listed in a stamp view. Each stamp represents a motif, with a glyph of the reaction, or the name of the pathway on it. In this stamp view, the identified motifs can be sorted according to three different criteria: the number of pathways containing the motif (not applicable for pathway motifs), the magnitude change of the computed value, and the statistical significance. When sorting by the number of pathways or the magnitude change, the motifs are arranged in order from the largest to the smallest. When sorting by the statistical significance, motifs with statistical significance on both the input side (reactants) and the output side (products) are at the front, followed by the motifs with statistical significance on one of the two sides, and finally the motifs with no statistical significance on both sides. Within each tier, the motifs are sorted from lowest to highest p-values.
+The identified motifs will be listed in a stamp view. Each stamp represents a motif, with a glyph of the reaction, or the name of the pathway on it. In this stamp view, the identified motifs can be sorted according to three different criteria: the number of pathways containing the motif (not applicable for pathway motifs), the magnitude change of the computed value, and the statistical significance. When sorting by the number of pathways or the magnitude change, the motifs are arranged in order from the largest to the smallest. When sorting by the statistical significance, motifs with statistical significance on both the input side (reactants) and the output side (products) are listed first by the product of their maximum statistics, followed by the motifs with statistical significance on one of the two sides, and finally the motifs with no statistical significance on both sides. Within each tier, the motifs are sorted from lowest to highest p-values. For all values or statistics used in sorting, only those that determined the motif are used.
 
 When the stamp view demonstrates draws reaction motifs, all the pathways containing the corresponding motif will be listed below the stamp view by clicking on the appropriate stamp. For pathway motifs, clicking on a pathway ID will draw the selected pathway as a graph, with all the motifs in this pathway highlighted.
 
