Updated figure legends

--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -6,5 +6,5 @@ Graphical Abstract (displayed as Figure @fig:overview)
 
 ![
   **Metaboverse conceptual overview.**
-  Illustration summarizing the usage of Metaboverse to model biological data on the global reaction network to rapidly identify regulatory hotspots. Traditionally, when a scientist performs an -omics experiment, they tend to focus on a couple of features that are differentially regulated. Metaboverse contextualizes the data across the metabolic network and identifies interesting regulatory patterns in the data.
+  Illustration summarizing the usage of Metaboverse to model biological data on the global reaction network to rapidly identify regulatory hotspots. Traditionally, when a scientist performs an -omics experiment, they tend to focus on a couple of features that are differentially regulated. Metaboverse allows a user to input multiple -omics data types which it then layers across the metabolic network. Metaboverse then uses this integrated model to identify interesting regulatory patterns in the data. Users can also dynamically explore metabolic pathways and other network representations.
 ](./content/figures/graphical_abstract.png "Square image"){#fig:overview}
