--- a/content/03.results.md
+++ b/content/03.results.md
@@ -9,7 +9,7 @@ We chose to format network visualizations in a reaction-centric format. This mea
 
 ![
   **Metaboverse package overview.**
-  Illustration outlining the data input, processing, and exploration steps of the Metaboverse package.
+  Illustration outlining the data input, processing, and exploration steps of the Metaboverse package. Users provide the organism of interest's name from a drop-down menu along with an output location. Users then have the option to provide transcriptomics, proteomics, and or metabolomics datasets. These datasets can be single- or multi-condition or time-course experiments. Data is formatted as follows: row names are the measured entity names or IDs, the first column is log<sub>2</sub> Fold Change or other measurement values, and the second column is statistical measurements. During this step, users can also provide sample labels and other modifiers that will customize the curation of the data on the reaction network. Metaboverse will then build the model. Once the model is complete, the user will be able to visualize the reaction motifs identified, explore pathway or global perturbation networks, or perform general pathway exploration of the data.
 ](./content/figures/package_overview.png "Square image"){#fig:package_overview}
 
 #### Handling data sparsity within the biological global network.
@@ -43,16 +43,16 @@ Mitochondrial fatty acid synthesis (mtFAS) acts as an important metabolic pathwa
 
 ![
   **Metaboverse identifies several reaction motifs of interest in <i>mct1</i>&Delta; cells.**
-  (A) Steady-state proteomics overlaid on the reaction, "Electron transfer from ubiquinol to cytochrome c of complex III". (B) Steady-state proteomics and metabolomics at 15 minutes overlaid TCA-related reactions. Appropriate time stamps are displayed in the upper-right hand corner of each subplot. Metabolomics and proteomics values are shown as node shading.
+  (A) Steady-state proteomics (12 hours) overlaid on the reaction, "Electron transfer from ubiquinol to cytochrome c of complex III". (B) Steady-state proteomics (12 hours) and metabolomics at 15 minutes overlaid on TCA-related reactions. Appropriate time stamps for the data type are displayed in the upper-right hand corner of each subplot. Metabolomics and proteomics values are shown as node shading, where an increasingly blue shade indicates down-regulation and an increasingly red shade indicates up-regulation. Measured log<2> Fold Changes and statistical values for each entity are displayed below the node name. A grey node indicates a reaction. A bold grey node with purple border indicates a motif was found at this reaction for the given data type time points. Non-reaction circles indicate metabolites and squares indicate proteins or protein complexes. Grey edges are core relationships between reaction inputs and outputs. Green edges indicate a catalyst. Dashed blue edges point from a metabolite component to the complex it is involved in. Dashed orange edges point from a protein component to the complex it is involved in. Protein complexes with dashed borders indicate that the values displayed on that node were inferred from the constituent protein and metabolite measurements. The shading in sub-plot A demonstrates Metaboverse's ability to show compartmentalization, while sub-plot B has compartmentalization shading turned off.
 ](./content/figures/fig_mct1.png "Square image"){#fig:mct1_vignette}
 
-The second pattern of interest that was expected was the marked reduction of TCA-related enzymes. Motif analysis within the TCA cycle found several regulatory hotspots between metabolites and metabolite-protein interactions throughout the steps of the TCA cycle (Figure @fig:mct1_vignette B). However, visualizing these motifs and data across the timecourse reveals interesting patterns. For the following metabolite values, we will provide those for the 15 minute time point as the statistical strength for the discussed metabolites is strongest at this time. First, citrate levels decrease across the metabolomics timecourse (at 15 min; log<sub>2</sub>FC: -0.-1.75, adjusted-p: 0.01), which is paired by reduced steady-state levels of Ctp1 (log<sub>2</sub>FC: -0.64, adjusted-p: 0.03), a protein that catalyzes the transfer of citrate from the mitochondrial matrix to the cytosol [@doi:10.1074/jbc.270.8.4108]. Citrate is a key metabolite and the first step in the TCA cycle. We can hypothesize that due to central carbon metabolite reductions, Ctp1 may be down-regulated as a form of regulation to maintain citrate in the mitochondrial where it is most physiologically important from a metabolism point of view.
+The second pattern of interest that was expected was the marked reduction of TCA-related enzymes. Motif analysis within the TCA cycle found several regulatory hotspots between metabolites and metabolite-protein interactions throughout the steps of the TCA cycle (Figure @fig:mct1_vignette B). However, visualizing these motifs and data across the time-course reveals interesting patterns. For the following metabolite values, we will provide those for the 15 minute time point as the statistical strength for the discussed metabolites is strongest at this time. First, citrate levels decrease across the metabolomics time-course (at 15 min; log<sub>2</sub>FC: -0.-1.75, adjusted-p: 0.01), which is paired by reduced steady-state levels of Ctp1 (log<sub>2</sub>FC: -0.64, adjusted-p: 0.03), a protein that catalyzes the transfer of citrate from the mitochondrial matrix to the cytosol [@doi:10.1074/jbc.270.8.4108]. Citrate is a key metabolite and the first step in the TCA cycle. We can hypothesize that due to central carbon metabolite reductions, Ctp1 may be down-regulated as a form of regulation to maintain citrate in the mitochondrial where it is most physiologically important from a metabolism point of view.
 
 Another point of interest is the up-regulation of Dic1 (log<sub>2</sub>FC: 2.15, adjusted-p: < 0.01), which catalyzes the exchange of malate (at 15 min; log<sub>2</sub>FC: 2.61, adjusted-p: < 0.01) between the mitochondrial matrix and cytosol [@doi:10.1046/j.1365-2958.1999.01197.x]. Interestingly, Dic1 is essential for growth in non-fermentable carbon source media. When yeast, especially those with deficits in TCA metabolism due to ablation of Mct1, are switched to a non-fermentable carbon, as was done in this experiment, they must adapt by up-regulating Dic1, as we see in this situation.
 
 We also see that while the catalytic enzymes in the TCA cycle are all reduced in concentration, several related metabolites are up-regulated across multiple time points in the dataset. It possible, for example, that the increased fumarate levels (at 15 min; log<sub>2</sub>FC: 1.00, adjusted-p: < 0.01) are related to the reduction in active fumarate hydratase (FH tetramer; log<sub>2</sub>FC: -1.39, adjusted-p: 0.03) as has been demonstrated previously and shown to associate with hereditary leiomyomatosis and renal cell cancer in humans [@doi:10.1038/nature19353]. Therefore, this would be an interesting point of further study to understand the adaptations these cells make to disruptions to the TCA cycle and their consequences.
 
-By analyzing this multi-omics dataset using reaction motif analysis and other interactive visualization, interesting questions arise. We see several reaction motifs that are expected based on prior knowledge of this biological model, as well as other interesting behaviors worthy of further follow-up. This demonstrates the potential Metaboverse has to act as a valuable hypothesis-generation tool, particularly with multi-omics and timecourse datasets, as well as a convenient platform for visualization and analysis of a user's dataset in the context of the metabolic or other reaction networks.
+By analyzing this multi-omics dataset using reaction motif analysis and other interactive visualization, interesting questions arise. We see several reaction motifs that are expected based on prior knowledge of this biological model, as well as other interesting behaviors worthy of further follow-up. This demonstrates the potential Metaboverse has to act as a valuable hypothesis-generation tool, particularly with multi-omics and time-course datasets, as well as a convenient platform for visualization and analysis of a user's dataset in the context of the metabolic or other reaction networks.
 
 #### 2. Metabolic signatures in human lung adenocarcinomas compared to normal lung tissue.
 We next turned to published human lung adenocarcinoma steady-state metabolomics data [@doi:10.1158/1940-6207.CAPR-14-0329] to assess the utility of Metaboverse when analyzing this data. Lung cancer remains a leading cause of death worldwide, and a more complete understanding of the metabolism of these tumors is essential in understanding how to better treat the condition.
@@ -63,5 +63,5 @@ Metaboverse simplifies the analysis process and allows users more flexibility vi
 
 ![
   **Metaboverse identifies nucleotide metabolism signatures in lung adenomcarcinoma metabolomics data.**
-  (A) Up-regulation of several nucleotide metabolites. (B) Identification of xanthine regulation by both motif and perturbation connectivity analysis. (C) Regulatory activity between glyceric acid and 3-Phosphoglyceric acid identified by motif analysis. (D) Disruptions of TCA metabolism support canonical disruptions during adenocarcinoma development.
+  (A) Up-regulation of several nucleotide metabolites. (B) Identification of xanthine regulation by both motif and perturbation connectivity analysis. (C) Regulatory activity between glyceric acid and 3-Phosphoglyceric acid identified by motif analysis. (D) Disruptions of TCA metabolism support canonical disruptions during adenocarcinoma development. Metabolomics values are shown as node shading, where an increasingly blue shade indicates down-regulation and an increasingly red shade indicates up-regulation. Measured log<2> Fold Changes and statistical values for each entity are displayed below the node name. A grey node indicates a reaction. A bold grey node with purple border indicates a motif was found at this reaction for the given data type time points. Non-reaction circles indicate metabolites, squares indicate proteins or protein complexes, and ellipses indicate gene components. Grey edges are core relationships between reaction inputs and outputs. Green edges indicate a catalyst, while red edges indicate inhibitors. Dashed blue edges point from a metabolite component to the complex it is involved in. Dashed orange edges point from a protein component to the complex it is involved in. Dashed purple edges point from a gene component to its protein product. Protein complexes with dashed borders indicate that the values displayed on that node were inferred from the constituent protein and metabolite measurements. 
 ](./content/figures/fig_lung.png "Square image"){#fig:lung_vignette}
