--- a/content/03.results.md
+++ b/content/03.results.md
@@ -57,11 +57,23 @@ By analyzing this multi-omics dataset using reaction motif analysis and other in
 #### 2. Metabolic signatures in human lung adenocarcinomas compared to normal lung tissue.
 We next turned to published human lung adenocarcinoma steady-state metabolomics data [@doi:10.1158/1940-6207.CAPR-14-0329] to assess the utility of Metaboverse when analyzing this data. Lung cancer remains a leading cause of death worldwide, and a more complete understanding of the metabolism of these tumors is essential in understanding how to better treat the condition.
 
-Consistent with the original study [@doi:10.1158/1940-6207.CAPR-14-0329], and in our recent re-study of the data [@doi:10.1093/gigascience/giz137], nucleotide metabolism was broadly up-regulated in adenocarcinoma samples in the motif analysis and perturbation connectivity analysis (Figure @fig:lung_vignette A). We also notice similar perturbations in xanthine (Figure @fig:lung_vignette B), glutamine, and others, which are highlighted to the user quickly in the motif and perturbation connectivity analyses. However, as we previously emphasized [@doi:10.1093/gigascience/giz137], by approaching these perturbations in a reaction-centric approach, we can identify regulatory behavior that further contextualizes the data. For example, we previously highlighted through a more manual approach the up-regulation of glyceric acid coupled with the proximal down-regulation of 3-Phosphoglyceric acid which could indicate the activity of glycerate kinase. This connection was missed in the original study, but was highlighted by the motif analysis available within Metaboverse. Activity of this sub-pathway is consequential as it has connections to serine metabolism which may be fostering an ideal environment for tumorigenesis (Figure @fig:lung_vignette C). Interestingly, within the measured and significant metabolites involved in the TCA cycle, we see a moderate up-regulation of malate (log<sub>2</sub> Fold Change: 0.39, adjusted-p: 0.02) and down-regulation of citrate (log<sub>2</sub> Fold Change: -0.64, adjusted-p: 0.01). This is consistent with the hypothesis that the TCA cycle is being starved of carbon via pyruvate, which is probably being shunted to lactate production, thus the lower citrate levels, while part of the TCA cycle can be fed through glutamate (log<sub>2</sub> Fold Change: 0.47, adjusted-p: < 0.01), thus the increased malate levels (Figure @fig:lung_vignette D) [@doi:10.1038/nrc.2016.71].
+Consistent with the original study [@doi:10.1158/1940-6207.CAPR-14-0329], and in our recent re-study of the data [@doi:10.1093/gigascience/giz137], nucleotide metabolism was broadly up-regulated in adenocarcinoma samples in the motif analysis and perturbation connectivity analysis (Figure @fig:lung_vignette A). We also notice similar perturbations in xanthine (Figure @fig:lung_vignette B), glutamine, and others, which are highlighted to the user quickly in the motif and perturbation connectivity analyses. However, as we previously emphasized [@doi:10.1093/gigascience/giz137], by approaching these perturbations in a reaction-centric approach, we can identify regulatory behavior that further contextualizes the data. For example, we previously highlighted through a more manual approach the up-regulation of glyceric acid coupled with the proximal down-regulation of 3-Phosphoglyceric acid which could indicate the activity of glycerate kinase. This connection was missed in the original study, but was highlighted by the motif analysis available within Metaboverse. Activity of this sub-pathway is consequential as it has connections to serine metabolism which may be fostering an ideal environment for tumorigenesis (Figure @fig:lung_vignette C). Interestingly, within the measured and significant metabolites involved in the TCA cycle, we see a moderate up-regulation of malate (log<sub>2</sub> Fold Change: 0.39, adjusted-p: 0.02) and down-regulation of citrate (log<sub>2</sub> Fold Change: -0.64, adjusted-p: 0.01). This is consistent with the hypothesis that the TCA cycle is being starved of carbon via pyruvate,
+
+which has been observed in many tumors to be shunted....
+glutaminalysis -- describe background more
+  mention alpha-ketaglutarate
+  more detail of the total cycle
+
+make sure to comment on flux addition
+in paper and posts
+
+
+
+ which is probably being shunted to lactate production, thus the lower citrate levels, while part of the TCA cycle can be fed through glutamate (log<sub>2</sub> Fold Change: 0.47, adjusted-p: < 0.01), thus the increased malate levels (Figure @fig:lung_vignette D) [@doi:10.1038/nrc.2016.71].
 
 Metaboverse simplifies the analysis process and allows users more flexibility via its interactive platform to identify canonical and interesting regulatory patterns within their data with ease. While we previously identified the regulatory pattern identified in Figure @fig:lung_vignette C, Metaboverse offers an automated platform for the discovery of such events, which were missed in the original study. We hope that by using Metaboverse, users will be able to extract new and exciting hypotheses that can drive their field forward.
 
 ![
   **Metaboverse identifies nucleotide metabolism signatures in lung adenomcarcinoma metabolomics data.**
-  (A) Up-regulation of several nucleotide metabolites. (B) Identification of xanthine regulation by both motif and perturbation connectivity analysis. (C) Regulatory activity between glyceric acid and 3-Phosphoglyceric acid identified by motif analysis. (D) Disruptions of TCA metabolism support canonical disruptions during adenocarcinoma development. Metabolomics values are shown as node shading, where an increasingly blue shade indicates down-regulation and an increasingly red shade indicates up-regulation. Measured log<2> Fold Changes and statistical values for each entity are displayed below the node name. A grey node indicates a reaction. A bold grey node with purple border indicates a motif was found at this reaction for the given data type time points. Non-reaction circles indicate metabolites, squares indicate proteins or protein complexes, and ellipses indicate gene components. Grey edges are core relationships between reaction inputs and outputs. Green edges indicate a catalyst, while red edges indicate inhibitors. Dashed blue edges point from a metabolite component to the complex it is involved in. Dashed orange edges point from a protein component to the complex it is involved in. Dashed purple edges point from a gene component to its protein product. Protein complexes with dashed borders indicate that the values displayed on that node were inferred from the constituent protein and metabolite measurements. 
+  (A) Up-regulation of several nucleotide metabolites. (B) Identification of xanthine regulation by both motif and perturbation connectivity analysis. (C) Regulatory activity between glyceric acid and 3-Phosphoglyceric acid identified by motif analysis. (D) Disruptions of TCA metabolism support canonical disruptions during adenocarcinoma development. Metabolomics values are shown as node shading, where an increasingly blue shade indicates down-regulation and an increasingly red shade indicates up-regulation. Measured log<2> Fold Changes and statistical values for each entity are displayed below the node name. A grey node indicates a reaction. A bold grey node with purple border indicates a motif was found at this reaction for the given data type time points. Non-reaction circles indicate metabolites, squares indicate proteins or protein complexes, and ellipses indicate gene components. Grey edges are core relationships between reaction inputs and outputs. Green edges indicate a catalyst, while red edges indicate inhibitors. Dashed blue edges point from a metabolite component to the complex it is involved in. Dashed orange edges point from a protein component to the complex it is involved in. Dashed purple edges point from a gene component to its protein product. Protein complexes with dashed borders indicate that the values displayed on that node were inferred from the constituent protein and metabolite measurements.
 ](./content/figures/fig_lung.png "Square image"){#fig:lung_vignette}
