Update with author feedback from draft #1

--- a/content/00.front-matter.md
+++ b/content/00.front-matter.md
@@ -39,6 +39,8 @@ on {{manubot.date}}.
 </small>
 
 
-<sup>†</sup> To whom correspondence should be addressed: jordan.berg@biochem.utah.edu; rutter@biochem.utah.edu
+To whom correspondence should be addressed: jordan.berg@biochem.utah.edu; rutter@biochem.utah.edu
 
-<sup>\*</sup> This is a working draft of manuscript and should therefore be treated as such. Conclusions, along with author order and contributions, may change as the manuscript is finalized.
+[comment]: <> (<sup>\*</sup> Lead Contact)
+
+<sup>†</sup> Senior Author
