--- a/content/04.discussion.md
+++ b/content/04.discussion.md
@@ -1,10 +1,10 @@
 ## Discussion
 
-In this manuscript, we introduce a new software tool for analysis and exploration of user data layered on the metabolic and global reaction networks. To improve on previous tools with similar capabilities, we introduced several new analytical tools and methods to aid users in the automated identification and discovery of regulatory patterns within their data in a reaction network context. These include the automated ability to identify reaction regulatory events across the global reaction network, such as a reaction where an input has a low measured abundance and an output has a high measured abundance. Metaboverse also provides dynamic and interactive visualization capabilities to search for patterns and features within the user data manually within classical pathway representations. If a user is interested in how a reaction motif is propagating across the global reaction network and not just a single pathway, a user can explore a reaction component's nearest reaction neighborhood. The user can also explore the connectedness of perturbations across the global network and begin to explore hypotheses around the role of redundancy within a biological network.
+In this manuscript, we introduce a new software tool for analysis and exploration of user data layered on the metabolic and global reaction networks. To improve on tools with similar capabilities, we introduced several new analytical tools and methods to aid users in the automated identification and discovery of regulatory patterns within their data in a reaction network context. These include the automated ability to identify reaction regulatory events across the global reaction network, such as a reaction where an input has a low measured abundance and an output has a high measured abundance. Metaboverse also provides dynamic and interactive visualization capabilities to search for patterns and features within the user data manually within classical pathway representations. If a user is interested in how a reaction motif is propagating across the global reaction network and not just a single pathway, they can explore a reaction component's nearest reaction neighborhood. The user can also explore the connectedness of perturbations across the global network and begin to explore hypotheses around the role of connected or disconnected reactions within a particular biological model.
 
 In order to handle the challenge of sparsity, particularly regarding metabolomics data and the metabolic reaction network, we introduce a reaction collapsing feature which summarizes a series of connected reactions where values may be missing between the reactions, but where the terminal ends of the reaction path have measured values. Importantly, this augments the capabilities available within Metaboverse, especially in identifying additional reaction motifs that may be of interest to the user.  
 
-We demonstrated the utility of Metaboverse in exploring single- and multi-omic datasets. We analyzed previously published studies and generated a novel dataset that highlights the time-course, multi-omic capabilities of this framework. We demonstrated that Metaboverse was able to identify regulatory motifs that were expected in the models based on the current literature, as well as identify intriguing patterns that lead us to form new hypotheses. We expect these features to be a powerful tool in the researcher's toolkit as they analyze their data and plan their next steps.
+We demonstrated the utility of Metaboverse in exploring single- and multi-omic datasets. We analyzed previously published studies and generated a novel dataset that highlights the time course, multi-omic capabilities of this framework. We demonstrated that Metaboverse was able to identify regulatory motifs that were expected in the models based on the current literature, as well as identify intriguing patterns that lead us to form new hypotheses. We expect these features to be a powerful tool in the researcher's toolkit as they analyze their data and plan their next steps. In the near future, we will implement several additional features that will expand the applicability of Metaboverse. For example, we will integrate additional common data quality control features for each data type, the ability to visualize and analyze flux metabolomics data, additional data pre-processing modules, other more targeted analysis approaches to aid users in following up on motif reaction search results, and an interactive motif builder.
 
 While Metaboverse aims to enhance the computational toolkit for data analysis and hypothesis generation in metabolic and other experiments, a number of challenges remain, which we intend to address in subsequent versions of this software. For example, while the reaction collapsing features of Metaboverse aid in identifying patterns across several reactions where data may be missing, there are various biological and technical edge cases that need to be considered in future implementations of this feature. This is particularly challenging in datasets where few metabolites were measured. Hopefully, as technical limitations in metabolomics are also overcome, more complete snapshots of metabolism will be visible. Additionally, while we take a more straightforward and somewhat rudimentary approach to statistical significance integration in the reaction motif searches, more holistic platforms for cross-omics integration are needed and remain a significant challenge across multi-omics research.
 
