Update with Jared's comments

--- a/content/00.front-matter.md
+++ b/content/00.front-matter.md
@@ -41,6 +41,6 @@ on {{manubot.date}}.
 
 To whom correspondence should be addressed: jordan.berg@biochem.utah.edu; rutter@biochem.utah.edu
 
-[comment]: <> (<sup>\*</sup> Lead Contact)
+<sup>\*</sup> Lead Contact
 
 <sup>†</sup> Senior Author
