Update with supplement figures

--- a/content/06.acknowledgements.md
+++ b/content/06.acknowledgements.md
@@ -1,6 +1,6 @@
 ## Acknowledgements
 
-We thank Alex J. Bott (U. of Utah), Ahmad A. Cluntun (U. of Utah), Kevin G. Hicks (U. of Utah), Jeffrey T. Morgan (U. of Utah), and other members of the Rutter lab for their thoughtful insights and suggestions. We thank Brian Dalley and the University of Utah High-Throughput Genomics Core for help with RNA library preparation and sequencing. The support and resources from the Center for High-Performance Computing at the University of Utah are gratefully acknowledged.
+We thank Alex J. Bott (U. of Utah), Ahmad A. Cluntun (U. of Utah), Kevin G. Hicks (U. of Utah), Jeffrey T. Morgan (U. of Utah), and other members of the Rutter lab for their thoughtful insights and suggestions. We thank Brian Dalley and the University of Utah High-Throughput Genomics Core for help with RNA library preparation and sequencing. We also thank Christine Pickett for editing services provided. The support and resources from the Center for High-Performance Computing at the University of Utah are gratefully acknowledged. 
 
 ## Funding
 
