--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,10 +1,10 @@
 ## Abstract {.page_break_before}
 
-Metabolism and its component reactions are complex, each with variable inputs, outputs, and modifiers. The harmony between these factors consequently determines the health and stability of a cell or organism. Perturbations to any of component of a reaction can have rippling downstream effects, which can be difficult to trace across the global reaction network, particularly when the effects occur between canonical representations of pathways. Researchers have primarily utilized reductionist approaches to understand metabolic reaction systems; however, customary methods often limit the scope of the analysis. Even the power of systems-centric omics approaches can be limited when only a handful of high magnitude signals in the data are prioritized. To address these challenges, we developed Metaboverse, an interactive tool for the exploration and automated extraction of potential regulatory events, patterns, and trends from multi-omic data within the context of the metabolic network and other global reaction networks. This framework will be foundational in increasing our ability to holistically understand static and temporal metabolic events and perturbations as well as gene-metabolite intra-cooperativity. Metaboverse is freely available under a GPL-3.0 license at [https://github.com/Metaboverse/](https://github.com/Metaboverse/).
+Metabolism and its component reactions are complex, each with variable inputs, outputs, and modifiers. The harmony between these factors consequently determines the health and stability of a cell or organism. Perturbations to any component of a reaction can have rippling downstream effects, which can be difficult to trace across the global reaction network, particularly when the effects occur between canonical representations of pathways. Researchers have primarily utilized reductionist approaches to understand metabolic reaction systems; however, customary methods often limit the scope of the analysis. Even the power of systems-centric omics approaches can be limited when only a handful of high magnitude signals in the data are prioritized. To address these challenges, we developed Metaboverse, an interactive tool for the exploration and automated extraction of potential regulatory events, patterns, and trends from multi-omic data within the context of the metabolic network and other global reaction networks. This framework will be foundational in increasing our ability to holistically understand static and temporal metabolic events and perturbations as well as gene-metabolite intra-cooperativity. Metaboverse is freely available under a GPL-3.0 license at [https://github.com/Metaboverse/](https://github.com/Metaboverse/).
 
 Graphical Abstract (displayed as Figure @fig:overview)
 
 ![
   **Metaboverse conceptual overview.**
-  Illustration summarizing the usage of Metaboverse to model biological data on the global reaction network to rapidly identify regulatory hotspots. Traditionally, when a scientist performs an omics experiment, they tend to focus on a few features that are differentially regulated. Metaboverse allows a user to input multiple omics data types which it then layers across the metabolic network. Metaboverse then uses this integrated model to identify patterns of putative regulatory potential in the data. Users can also dynamically explore metabolic pathways and other network representations.
+  Illustration summarizing the usage of Metaboverse to model biological data on the global reaction network to rapidly identify regulatory hotspots. Traditionally, when scientists perform an omics experiment, they tend to focus on a few features that are differentially regulated. Metaboverse allows a user to input multiple omics data types, which it layers across the metabolic network. Metaboverse then uses this integrated model to identify patterns of putative regulatory potential in the data. The user can also dynamically explore metabolic pathways and other network representations.
 ](./content/figures/graphical_abstract.png "Square image"){#fig:overview}
